# file-transfer

.github/workflows/: build-macos.yml
docs/: PRD-v0.1.md  Rust-Tauri-语法练习.md  Rust-Tauri-语法速记.md  lan-transfer-ui-design-spec-v0.1.md
hello world/: package-lock.json
hello world/src/: App.css  App.tsx
hello world/src-tauri/: tauri.conf.json
hello world/src-tauri/src/: lib.rs
main/: package-lock.json  package.json  pnpm-lock.yaml
main/src/: App.tsx  api.ts  format.ts  store.ts  types.ts
main/src-tauri/: Cargo.toml  tauri.conf.json
main/src-tauri/src/: commands.rs  config.rs  device.rs  http_server.rs  lib.rs  main.rs  models.rs  transfer.rs
main/src/components/common/: AppToast.tsx  EmptyStateView.tsx  InfoRow.tsx  Panel.tsx  StatusDot.tsx
main/src/components/layout/: AppLayout.tsx
main/src/components/local/: EditDeviceNameModal.tsx  LocalStatusPanel.tsx
main/src/components/receive/: ReceiveRequestModal.tsx
main/src/components/send/: SendFilesPanel.tsx
main/src/components/tasks/: TransferTasksPanel.tsx
main/src/hooks/: useLanTransferApp.ts
main/src/styles/: globals.css
openspec/changes/create-lan-transfer-mvp/: design.md  proposal.md  tasks.md
openspec/changes/create-lan-transfer-mvp/specs/file-selection-queue/: spec.md
openspec/changes/create-lan-transfer-mvp/specs/lan-transfer-protocol/: spec.md
openspec/changes/create-lan-transfer-mvp/specs/local-device-service/: spec.md
openspec/changes/create-lan-transfer-mvp/specs/main-window-ui/: spec.md
openspec/changes/create-lan-transfer-mvp/specs/manual-target-connection/: spec.md
(+2 files in other folders)
