[package]
name = "lan-transfer"
version = "0.1.0"
description = "LAN file transfer desktop app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lan_transfer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.23.4", features = ["v4"] }
gethostname = "1.1.0"
dirs = "6.0.0"
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
local-ip-address = "0.6"
reqwest = { version = "0.12", features = ["json", "stream"] }
rfd = "0.15"
url = "2"
